<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnCampoMinado"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:onClick="campoMinado"
        android:text="@string/campo_minado" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/embreve" />

    <Button
        android:id="@+id/button"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/jogo_memoria" />

    <Button
        android:id="@+id/button2"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/jogo_velha" />

    <Button
        android:id="@+id/button3"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/sudoku" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1" />

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-0381609228541841/9233128121" >
    </com.google.android.gms.ads.AdView>

</LinearLayout>